Fix author text wrapping

--- a/src/app/message-display/message-display.component.scss
+++ b/src/app/message-display/message-display.component.scss
@@ -10,7 +10,7 @@
             display: block;
             margin-right: 10px;
             font-weight: bold;
-            width: 3ch;
+            width: auto;
         }
     }
 }
